# mission-control

./: .coverage  .gitignore  CHANGELOG.md  Dockerfile.backend  Dockerfile.frontend  README.md  ROADMAP.md  docker-compose.yml  gate-check-mission-control.py  mission-control.sh  progress.txt  start.sh  test_health.py
backend/: pyproject.toml
backend/app/: database.py  logging_config.py  main.py  models.py
backend/app/routers/: __init__.py  agents.py  cron.py  health.py  projects.py  skills.py  stories.py  system.py
backend/app/services/: __init__.py  cron_parser.py  health_aggregator.py  openspec_sync.py  sessions_client.py
backend/tests/: __init__.py  conftest.py  test_agents.py  test_stories.py  test_system.py
frontend/: api_client.py  app.py  theme.py
frontend/components/: __init__.py  agents.py  cron.py  health_dashboard.py  healthcheck.py  kanban.py  skills.py  system.py
tests/: browser_validate.py  test_health_aggregator.py
